--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+appdirs==1.4.3
+attrs==18.2.0
+black==18.9b0
+Click==7.0
+entrypoints==0.3
+flake8==3.7.5
 Flask==0.10
 Flask-Bootstrap==3.2.0.2
-simplejson==3.6.0
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+mccabe==0.6.1
 Pillow==2.5.1
-black
-flake8
+pkg-resources==0.0.0
+pycodestyle==2.5.0
+pyflakes==2.1.0
+simplejson==3.6.0
+toml==0.10.0
+Werkzeug==0.14.1
